# cross-adaptation

./: .gitignore  AUTHORS.md  CITATION.CFF  LICENSE  README.md  hello.py  main.py  pyproject.toml  run_experiments.sh  test_adaptation.py
cross_adaptation/: __init__.py  main.py
cross_adaptation/core/: cross_adaptation.py
cross_adaptation/models/: base_model.py
cross_adaptation/tools/: cross_adaptation.py
cross_adptation/: main.py
cross_adptation/tools/: adapt_domains.py
experiments/: main.py
experiments/config/: config.yaml
experiments/config/adapt_model/: kliep.yaml  kmm.yaml  tradaboost.yaml  wann.yaml
experiments/config/classifier/: dtree.yaml  knn.yaml  logistic.yaml  mlp.yaml  rf.yaml  svm.yaml  xgb.yaml
experiments/data_preprocessing/: preprocess_tabular.py
experiments/notebooks/: tabular_cross_adaptation.ipynb
experiments/tools/: handle_dfs.py
experiments_old/: main.py
experiments_old/config/: config.yaml
experiments_old/tools/: align_columns.py
src/patches/: __init__.py  onehotencoder_patch.py  simple_fix.py  sklearn_compat.py  tradaboost_fix.py  tradaboost_patch.py
src/visualization/: __init__.py  adaptation_visualizer.py
test_adapted_data_kliep/: Domain_A_adapted.csv  Domain_A_weights.npy  Domain_B_adapted.csv  Domain_B_weights.npy  Domain_C_adapted.csv  Domain_C_weights.npy
test_adapted_data_kmm/: Domain_A_adapted.csv  Domain_A_weights.npy  Domain_B_adapted.csv  Domain_B_weights.npy  Domain_C_adapted.csv  Domain_C_weights.npy
wandb/: latest-run
wandb/run-20230611_230255-h6ljpntm/: run-h6ljpntm.wandb
(+920 files in other folders)
