[tool.poetry]
name = "cross-adaptation"
version = "0.1.0"
description = ""
authors = ["a-huli <klaudel.b@gmail.com>"]
readme = "README.md"
packages = [{include = "cross_adaptation"}]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
pandas = "^2.0.2"
joblib = "^1.2.0"
scikit-learn = "^1.2.2"
hydra-optuna-sweeper = "^1.2.0"
numpy = "^1.24.3"
adapt = "0.4.1"
wandb = "^0.15.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
