[project]
name = "cross-adaptation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adapt>=0.4.4",
    "datasets>=4.0.0",
    "hydra-core>=1.3.2",
    "hydra-optuna-sweeper>=1.2.0",
    "lazypredict>=0.2.16",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tllib",
    "transformers>=4.54.1",
    "wandb>=0.21.0",
    "xgboost>=3.0.2",
    "xlrd>=2.0.2",
]

[tool.uv.sources]
tllib = { git = "https://github.com/thuml/Transfer-Learning-Library.git" }
